RESOLVED FIXED229617
[MSE][GPUP] SourceBufferPrivateAVFObjC does not work properly when audio and video exchange their track IDs
https://bugs.webkit.org/show_bug.cgi?id=229617
Summary [MSE][GPUP] SourceBufferPrivateAVFObjC does not work properly when audio and ...
Peng Liu
Reported 2021-08-27 10:47:42 PDT
[MSE][GPUP] SourceBufferPrivateAVFObjC does not work properly when audio and video exchange their track IDs
Attachments
WIP patch (10.97 KB, patch)
2021-08-27 10:53 PDT, Peng Liu
no flags
WIP patch. Need a test. (11.46 KB, patch)
2021-08-30 10:26 PDT, Peng Liu
no flags
[fast-cq] Patch (894.14 KB, patch)
2021-09-01 11:20 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2021-08-27 10:49:34 PDT
Peng Liu
Comment 2 2021-08-27 10:53:52 PDT
Created attachment 436641 [details] WIP patch
Peng Liu
Comment 3 2021-08-30 10:26:42 PDT
Created attachment 436792 [details] WIP patch. Need a test.
Peng Liu
Comment 4 2021-09-01 11:20:46 PDT
Created attachment 437045 [details] [fast-cq] Patch
Peng Liu
Comment 5 2021-09-02 13:00:29 PDT
The mac-debug-wk1 failures are not related to this patch. See: <https://trac.webkit.org/changeset/281934/webkit>
EWS
Comment 6 2021-09-02 13:02:58 PDT
Committed r281948 (241256@main): <https://commits.webkit.org/241256@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437045 [details].
Note You need to log in before you can comment on or make changes to this bug.